[package]
name = "zwave_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hackrfone = "0.2.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
